# ac-qu-ai-nt

./: Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: check-and-build-and-test.yml  compile-and-publish-binaries-to-release.yml  daily.yml  release-plz.yml
cli-clap/: CHANGELOG.md  Cargo.toml
cli-clap/src/: lib.rs  main.rs
core/: CHANGELOG.md  Cargo.toml
gui-eframe/: CHANGELOG.md  Cargo.toml
gui-eframe/src/: lib.rs  main.rs
multibinary/: CHANGELOG.md  Cargo.toml
multibinary/src/: main.rs
tui-ratatui/: CHANGELOG.md  Cargo.toml
tui-ratatui/src/: lib.rs  main.rs
