[workspace]
members = ["cli-clap", "multibinary"]
resolver = "2"

[workspace.package]
authors = ["J / Jacob Babich <jacobbabichpublic+git@gmail.com>"]
license = "Apache-2.0 OR MIT OR Unlicense"
repository = "https://github.com/babichjacob/ac-qu-ai-nt"

[workspace.dependencies]
clap = "4"
tracing = "0.1"
