[workspace]
members = ["core", "cli-clap", "gui-eframe", "tui-ratatui", "multibinary"]
resolver = "2"

[workspace.package]
authors = ["J / Jacob Babich <jacobbabichpublic+git@gmail.com>"]
license = "Apache-2.0 OR MIT OR Unlicense"
repository = "https://github.com/babichjacob/ac-qu-ai-nt"

[workspace.dependencies]
clap = "4"
snafu = "0.8"
tracing = "0.1.23"

[patch.crates-io]
llama-cpp-2 = { version = "0.1.81", git = "https://github.com/babichjacob/llama-cpp-rs", branch = "fix-use-c-char-instead-of-i8" }
