[package]
name = "ac-qu-ai-nt-cli-clap"
description = "A CLI (written with clap) for ac-qu-ai-nt"
version = "0.0.2"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
