[package]
name = "ac-qu-ai-nt-core"
description = "The core library of ac-qu-ai-nt. If you're looking for the application, see cli-clap or gui-eframe or tui-ratatui or the multibinary"
version = "0.0.5"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
llama-cpp-2 = "0.1.82"
ocrs = "0.9"
rten = "0.13.1"
snafu = { workspace = true }

tracing = { workspace = true, optional = true }
