[package]
name = "ac-qu-ai-nt-core"
description = "The core library of ac-qu-ai-nt. If you're looking for the application, see cli-clap or gui-eframe or tui-ratatui or the multibinary"
version = "0.0.8"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
cozo = { version = "0.7", default-features = false, features = [
    "graph-algo",
    "storage-sqlite",
] }
llama-cpp-2 = "0.1.85"
ocrs = "0.9"
reqwest = { version = "0.12.4", default-features = false, features = [
    "http2",

    "macos-system-configuration",
    "rustls-tls-webpki-roots",

    "json",
    "multipart",

    "brotli",
    "deflate",
    "gzip",
    "zstd",
] }
snafu = { workspace = true }

tracing = { workspace = true, optional = true }
