[package]
name = "ac-qu-ai-nt-gui-eframe"
description = "A GUI (written with egui / eframe) for ac-qu-ai-nt"
version = "0.0.2"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
