[package]
name = "ac-qu-ai-nt"
description = "A WIP project using AI to break down a user's query, acquire the knowledge to answer it, then transfer those insights to the user"
version = "0.0.6"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["cli-clap", "gui-eframe", "tui-ratatui", "tracing"]

cli-clap = ["dep:ac-qu-ai-nt-cli-clap"]
gui-eframe = []
tui-ratatui = []

tracing = ["dep:tracing-subscriber", "ac-qu-ai-nt-cli-clap?/tracing"]

[dependencies]
ac-qu-ai-nt-cli-clap = { version = "0.0.4", path = "../cli-clap", optional = true }
clap = { workspace = true, features = ["derive", "env"] }
dirs-next = "2.0.0"
tracing-subscriber = { version = "0.3.18", optional = true }
