[package]
name = "ac-qu-ai-nt"
description = "A WIP project using AI to break down a user's query, acquire the knowledge to answer it, then transfer those insights to the user"
version = "0.0.16"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"

[features]
default = ["cli-clap", "gui-eframe", "tui-ratatui", "tracing"]

cli-clap = ["dep:ac-qu-ai-nt-cli-clap"]
gui-eframe = ["dep:ac-qu-ai-nt-gui-eframe"]
tui-ratatui = ["dep:ac-qu-ai-nt-tui-ratatui"]

tracing = [
    "dep:tracing-subscriber",
    "ac-qu-ai-nt-cli-clap?/tracing",
    "ac-qu-ai-nt-gui-eframe?/tracing",
    "ac-qu-ai-nt-tui-ratatui?/tracing",
]

[dependencies]
ac-qu-ai-nt-cli-clap = { version = "0.0.11", path = "../cli-clap", optional = true }
ac-qu-ai-nt-gui-eframe = { version = "0.0.8", path = "../gui-eframe", optional = true }
ac-qu-ai-nt-tui-ratatui = { version = "0.0.8", path = "../tui-ratatui", optional = true }

cfg-if = "1.0.0"
clap = { workspace = true, features = ["derive", "env"] }
dirs-next = "2.0.0"
snafu = { workspace = true }

tracing-subscriber = { version = "0.3.18", optional = true }
