[package]
name = "ac-qu-ai-nt-tui-ratatui"
version = "0.0.1"
edition = "2021"
rust-version = "1.76"

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
